app/assets/tailwind/application.css
/* ... */
@utility folder-toggle-wrap {
  .namespace-list-tree & {
    font-size: 0;
    flex-shrink: 0;
  }

  .namespace-list-tree & span {
    font-size: 12px;
  }
}

@utility item-type-icon {
  .namespace-list-tree & {
    margin-top: 2px;
    width: 20px;
  }
}

@utility folder-caret {
  .namespace-list-tree > .namespace-entry:not(.has-children) & {
    opacity: 0;
  }
}

@utility being-removed {
  .namespace-list-tree .namespace-list-tree &.namespace-entry {
    opacity: 0.5;
  }
}

@utility namespace-entry-contents {
  .namespace-list-tree .namespace-entry.has-children > &:hover {
    @apply cursor-pointer border-slate-50 bg-slate-50 dark:border-slate-600 dark:bg-slate-600;
  }

  .namespace-list-tree & .namespace-text-container {
    min-width: 0;
  }

  .namespace-list-tree & .namespace-text {
    min-width: 0;
  }

  .namespace-list-tree & .namespace-text {
    flex-basis: 100%;
  }

  .namespace-list-tree & .avatar-container {
    flex-shrink: 0;
  }

  .namespace-list-tree & .avatar-container > a {
    width: 100%;
    text-decoration: none;
  }

  .namespace-list-tree & .title {
    @apply text-base font-medium text-slate-900 dark:text-white;
  }

  .namespace-list-tree &.has-more-items {
    display: block;
    padding: 20px 10px;
  }

  .namespace-list-tree & .description p {
    max-width: 100%;
    @apply text-sm text-slate-700 dark:text-slate-400;
  }

  .namespace-list-tree & .stats {
    position: relative;
    line-height: normal;
    text-align: right;
    flex-shrink: 0;
  }

  .namespace-list-tree & .stats > span {
    display: inline-flex;
    align-items: center;
    height: 16px;
    min-width: 30px;
  }

  .namespace-list-tree & .stats .stat-value {
    margin: 2px 0 0 5px;
  }
}

@utility namespace-text-container {
  .namespace-list-tree .namespace-entry-contents & {
    min-width: 0;
  }
}

@utility namespace-text {
  .namespace-list-tree .namespace-entry-contents & {
    min-width: 0;
  }

  .namespace-list-tree .namespace-entry-contents & {
    flex-basis: 100%;
  }
}

@utility avatar-container {
  .namespace-list-tree .namespace-entry-contents & {
    flex-shrink: 0;
  }

  .namespace-list-tree .namespace-entry-contents & > a {
    width: 100%;
    text-decoration: none;
  }
}

@utility title {
  .namespace-list-tree .namespace-entry-contents & {
    @apply text-base font-medium text-slate-900 dark:text-white;
  }
}

@utility has-more-items {
  .namespace-list-tree &.namespace-entry-contents {
    display: block;
    padding: 20px 10px;
  }
}

@utility description {
  .namespace-list-tree .namespace-entry-contents & p {
    max-width: 100%;
    @apply text-sm text-slate-700 dark:text-slate-400;
  }
}

@utility stats {
  .namespace-list-tree .namespace-entry-contents & {
    position: relative;
    line-height: normal;
    text-align: right;
    flex-shrink: 0;
  }

  .namespace-list-tree .namespace-entry-contents & > span {
    display: inline-flex;
    align-items: center;
    height: 16px;
    min-width: 30px;
  }

  .namespace-list-tree .namespace-entry-contents & .stat-value {
    margin: 2px 0 0 5px;
  }
}

@utility stat-value {
  .namespace-list-tree .namespace-entry-contents .stats & {
    margin: 2px 0 0 5px;
  }
}

@layer utilities {
  body {
    height: 100vh;
    overflow: hidden;
  }
}

@layer components {
  kbd {
    @apply rounded-lg border border-slate-200 bg-slate-100 px-2 py-1.5 text-sm font-semibold text-slate-800 dark:border-slate-500 dark:bg-slate-600 dark:text-slate-100;
  }

  dt {
    @apply text-base font-medium text-gray-900 dark:text-white;
  }

  dd {
    @apply text-gray-500 dark:text-gray-400;
  }

  dd:not(:last-child) {
    @apply mb-4;
  }

  p link {
    @apply font-medium text-green-600 underline hover:no-underline dark:text-green-500;
  }

  input[type="checkbox"] {
    @apply focus:ring-primary-300 dark:focus:ring-primary-600 h-4 w-4 rounded-sm border border-slate-300 bg-slate-50 focus:ring-4 dark:border-slate-600 dark:bg-slate-800 dark:ring-offset-slate-800;
  }

  input[type="search"]::-webkit-search-cancel-button {
    -webkit-appearance: none;
    cursor: pointer;
    height: 20px;
    width: 20px;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20' fill='currentColor' class='w-5 h-5'%3E%3Cpath d='M6.28 5.22a.75.75 0 00-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 101.06 1.06L10 11.06l3.72 3.72a.75.75 0 101.06-1.06L11.06 10l3.72-3.72a.75.75 0 00-1.06-1.06L10 8.94 6.28 5.22z' /%3E%3C/svg%3E%0A");
  }

  /* VIRAL DIALOG */
  dialog {
    @apply max-h-full w-full max-w-2xl overflow-y-hidden rounded-lg bg-white p-0 shadow-sm focus:outline-hidden dark:bg-slate-800;
    top: 50%;
    left: 50%;
    -webkit-transform: translateX(-50%) translateY(-50%);
    -moz-transform: translateX(-50%) translateY(-50%);
    -ms-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
  }

  dialog::backdrop {
    @apply bg-slate-400/30 backdrop-blur-xs dark:bg-slate-900/40;
  }

  .dialog--section {
    max-height: calc(80vh - 1.25rem - 2.5rem);
    @apply overflow-y-auto p-5;
  }

  strong {
    @apply font-semibold;
  }
}

.pagy-nav.pagination {
  @apply isolate inline-flex -space-x-px rounded-md shadow-xs;
}

.page.next a {
  @apply flex h-full items-center justify-center rounded-r-lg border border-slate-300 bg-white px-3 py-1.5 leading-tight text-slate-500 hover:bg-slate-100 hover:text-slate-700 dark:border-slate-700 dark:bg-slate-800 dark:text-slate-400 dark:hover:bg-slate-700 dark:hover:text-white;
}

.page.prev a {
  @apply ml-0 flex h-full items-center justify-center rounded-l-lg border border-slate-300 bg-white px-3 py-1.5 text-slate-500 hover:bg-slate-100 hover:text-slate-700 dark:border-slate-700 dark:bg-slate-800 dark:text-slate-400 dark:hover:bg-slate-700 dark:hover:text-white;
}
/* ... */

